--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <ul>
           <li><a href="#">Информация</a></li><!--
           --><li><a href="#">Фото и видео</a></li><!--
-          --><li><a href="index.html"><img src="img/nav-logo.png" width="137" height="70" alt="home"></a></li><!--
           --><li><a href="#">Карта штата</a></li><!--
           --><li><a href="sedona-inner.html">Гостиницы</a></li>
         </ul>
+        <div class="head-logo">
+          <a href="index.html"><img src="img/nav-logo.png" width="138" height="70" alt="home"></a>
+        </div>
       </header>
       <section class="head-pic">
         <img src="img/sedona-text.png" width="458" height="352" alt="">
@@ -129,11 +131,11 @@
               --></label>
               <label for="adults">Взрослые:</label><!--
               --><button type="button" name="minus-ad"><span class="icon-minus"></span></button><!--
-              --><input type="text" name="adults" id="adults"><!--
+              --><input type="text" name="adults" value="2" id="adults"><!--
               --><button type="button" name="plus-ad"><span class="icon-plus"></span></button><!--
             --><label for="childs">Дети:</label><!--
             --><button type="button" name="minus-ch"><span class="icon-minus"></span></button><!--
-              --><input type="text" name="childs" id="childs"><!--
+            --><input type="text" name="childs" value="0" id="childs"><!--
               --><button type="button" name="plus-ch"><span class="icon-plus"></span></button>
             </div>
             <div class="bottom-form">
