--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             Укажите предполагаемые даты поездки, <br>
             и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
-          <a href="#"><h2>Поиск гостиницы в Седоне</h2></a>
+          <a class="show-form" href="#"><h2>Поиск гостиницы в Седоне</h2></a>
           <form class="hotels-search" action="https://echo.htmlacademy.ru" method="post">
             <div class="body-form">
               <button type="button" name="calendar-in"><span class="icon-calendar"></span></button><!--
@@ -163,5 +163,7 @@
           </div>
         </footer>
     </main>
+    <script src="js/script.js">
+    </script>
   </body>
 </html>
