--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
             <div class="body-form">
               <button type="button" name="calendar-in"><span class="icon-calendar"></span></button><!--
               --><label for="come-in">Дата заезда:
-                <input type="text" name="date-in" placeholder="24 апреля 2016" id="come-in"><!--
+                <input type="text" name="date-in" required placeholder="24 апреля 2016" id="come-in"><!--
               --></label>
               <button type="button" name="calendar-out"><span class="icon-calendar"></span></button>
               <label for="come-out">Дата выезда:
-                 <input type="text" name="date-out" placeholder="4 июля 2016" id="come-out"><!--
+                 <input type="text" name="date-out" required placeholder="4 июля 2016" id="come-out"><!--
               --></label>
               <label for="adults">Взрослые:</label><!--
               --><button type="button" name="minus-ad"><span class="icon-minus"></span></button><!--
