--- a/sedona-inner.html
+++ b/sedona-inner.html
@@ -92,7 +92,7 @@
           </ul>
         </div>
       </section><!--
-      --><hr size="1" noshade color="#fafafa"><!--
+      --><hr size="1" noshade color="#e5e5e5"><!--
       --><article class="index-block">
         <div class="photo">
           <img class="picture" src="img/amara-hotel.jpg" width="135" height="90" alt="pic">
@@ -116,7 +116,7 @@
           <span class="rating">Рейтинг: 8,5</span>
         </div>
       </article><!--
-      --><hr size="1" noshade color="#fafafa"><!--
+      --><hr size="1" noshade color="#e5e5e5"><!--
       --><article class="index-block">
         <div class="photo">
           <img class="picture" src="img/desert-motel.jpg" width="135" height="90" alt="pic">
@@ -138,7 +138,7 @@
           <span class="rating">Рейтинг: 8,9</span>
         </div>
       </article><!--
-      --><hr size="1" noshade color="#fafafa"><!--
+      --><hr size="1" noshade color="#e5e5e5"><!--
       --><article class="index-block">
         <div class="photo">
           <img class="picture" src="img/villas-apart.jpg" width="135" height="90" alt="pic">
@@ -161,7 +161,7 @@
           <span class="rating">Рейтинг: 9,2</span>
         </div>
       </article><!--
-      --><hr size="1" noshade color="#fafafa"><!--
+      --><hr size="1" noshade color="#e5e5e5"><!--
       --><footer class="inner-footer">
           <div class="hash">
             <a href="#">#visitsedona</a>
