--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section class="head-caption">
         <h2>
           Седона &mdash; небольшой городок в аризоне, <br>
-          заслуживающий большего! <br>
+          заслуживающий большего!
         </h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       </section>
@@ -78,7 +78,7 @@
         </div><!--
         --><div class="box box-blue">
             <h2>Там есть <br>мост дьявола</h2>
-            <span>&mdash; №2 &mdash;</span><br>
+            <span>&mdash; №2 &mdash;</span>
             <p>
               Да, по нему можно пройти! <br>
               Если конечно вы осмелитесь
@@ -88,7 +88,7 @@
       <section class="benefits">
         <div class="box box-grey">
             <h2>Небольшая <br>площадь</h2>
-            <span>&mdash; №3 &mdash;</span><br>
+            <span>&mdash; №3 &mdash;</span>
             <p>
               Все достопримечательности <br>
               находятся очень близко
@@ -96,7 +96,7 @@
         </div><!--
         --><div class="box box-grey">
             <h2>Красивая <br>дорога</h2>
-            <span>&mdash; №4 &mdash;</span><br>
+            <span>&mdash; №4 &mdash;</span>
             <p>
               Ехать в Седону из Лас-Вегаса совсем <br>
               не скучно!
@@ -118,7 +118,7 @@
             Укажите предполагаемые даты поездки, <br>
             и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
-          <a class="show-form" href="#"><h2>Поиск гостиницы в Седоне</h2></a>
+          <a class="show-form" href="form.html"><h2>Поиск гостиницы в Седоне</h2></a>
           <form class="hotels-search" action="https://echo.htmlacademy.ru" method="post">
             <div class="body-form">
               <button type="button" name="calendar-in"><span class="icon-calendar"></span></button><!--
